--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.9.2",
     "mongoose": "^4.1.8",
     "morgan": "~1.5.3",
+    "sass": "^0.5.0",
     "serve-favicon": "~2.2.1"
   }
 }
